--- a/web/themes/custom/themekit/sass/regions/_footer.scss
+++ b/web/themes/custom/themekit/sass/regions/_footer.scss
@@ -53,4 +53,8 @@
       }
     }
   }
+
+  [id="block-footerleftcopy"] {
+    padding-left: rem-calc(25);
+  }
 }
